update the composer package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zacao/slim-mvc-skeleton",
+    "name": "zacao/slim-mvc",
     "description": "Sample skeleton project for slim framwork with MVC",
     "version": "0.1.0",
     "license":"MIT",
