1. add router with namespaced controller 2. update the README file

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zacao/slim-mvc",
-    "description": "MVC skeleton/boilerplate for the Slim framework",
+    "description": "MVC Skeleton/Boilerplate for the Slim framework",
     "keywords": ["microframework", "slim", "rest", "mvc", "router", "skeleton", "boilerplate"],
     "version": "0.2.0",
     "type": "project",
